--- a/src/PortfolioContainer/Resume/Resume.css
+++ b/src/PortfolioContainer/Resume/Resume.css
@@ -30,6 +30,7 @@
   .experience-description {
     margin: 10px 0 0 0;
     text-align: justify;
+    max-width: 100%;
   }
   
   .resume-description-text {
